--- a/road_signs_detection.ipynb
+++ b/road_signs_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "road_signs_detection.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO80LyaCoEFLsohwfywT/lL",
+      "authorship_tag": "ABX9TyMBBJ2b5KJy3Cs5kG5tKU5P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -394,13 +394,13 @@
         }
       ],
       "source": [
-        "#podłączenie dysku Google\n",
+        "#podlaczenie dysku Google\n",
         "import os\n",
         "from google.colab import drive\n",
         "\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "#wskazanie ścieżki do projektu\n",
+        "#wskazanie scieżki do projektu\n",
         "os.chdir('/content/drive/My Drive/WdSI_projekt')"
       ]
     },
@@ -461,7 +461,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#podanie ścieżki treningowej oraz słów kluczowych\n",
+        "#podanie sciezki treningowej oraz slow kluczowych\n",
         "dataset_train = core.Dataset('train/annotations/', 'train/images/')\n",
         "model = core.Model(['speedlimit', 'crosswalk', 'stop', 'trafficlight'])\n",
         "\n",
@@ -696,7 +696,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#wywołanie obrazu ze zbioru treningowego celem sprawdzenia możliwości oznaczenia znaków\n",
+        "#wywolanie obrazu ze zbioru treningowego celem sprawdzenia mozliwosci oznaczenia znakow\n",
         "image_train = utils.read_image('train/images/road101.png')\n",
         "predictions_train = model.predict(image_train)\n",
         "\n",
@@ -704,7 +704,7 @@
         "\n",
         "import numpy as np\n",
         "\n",
-        "#filtracja wyników\n",
+        "#filtracja wynikow\n",
         "train_filter = np.where(scores_train > 0.9)\n",
         "scores_train_filter = scores_train[train_filter]\n",
         "boxes_train_filter = boxes_train[train_filter]\n",
@@ -714,7 +714,7 @@
         "for i in num_list_train:\n",
         "  labels_train_filter.append(labels_train[i])\n",
         "  \n",
-        "#wyplotowanie obrazu, rozpoznanie typu, podanie współrzędnych oraz prawdopodobieństwa\n",
+        "#wyplotowanie obrazu, rozpoznanie typu, podanie wspolrzędnych oraz prawdopodobienstwa\n",
         "visualize.show_labeled_image(image_train, boxes_train_filter, labels_train_filter)\n",
         "print(labels_train_filter)\n",
         "print(boxes_train_filter)\n",
@@ -764,13 +764,13 @@
     {
       "cell_type": "code",
       "source": [
-        "#wywołanie obrazu ze zbioru testowego celem sprawdzenia możliwości oznaczenia znaków\n",
+        "#wywolanie obrazu ze zbioru testowego celem sprawdzenia mozliwosci oznaczenia znakow\n",
         "image_test = utils.read_image('test/images/road715.png')\n",
         "predictions_test = model.predict(image_test)\n",
         "\n",
         "labels_test, boxes_test, scores_test = predictions_test\n",
         "\n",
-        "#filtracja wyników\n",
+        "#filtracja wynikow\n",
         "test_filter = np.where(scores_test > 0.9)\n",
         "scores_test_filter = scores_test[test_filter]\n",
         "boxes_test_filter = boxes_test[test_filter]\n",
@@ -780,7 +780,7 @@
         "for j in num_list_test:\n",
         "  labels_test_filter.append(labels_test[j])\n",
         "  \n",
-        "#wyplotowanie obrazu, rozpoznanie typu, podanie współrzędnych oraz prawdopodobieństwa\n",
+        "#wyplotowanie obrazu, rozpoznanie typu, podanie wspolrzednych oraz prawdopodobienstwa\n",
         "visualize.show_labeled_image(image_test, boxes_test_filter, labels_test_filter)\n",
         "print(labels_test_filter)\n",
         "print(boxes_test_filter)\n",
@@ -823,15 +823,16 @@
     {
       "cell_type": "code",
       "source": [
+        "#detekcja znakow ograniczenia predkosci\n",
         "def detect():\n",
-        "    # detekcja znakow ograniczenia predkosci\n",
+        "    #petla wczytujaca obrazy ze zbioru testowego\n",
         "    for detection in os.listdir('test/images'):\n",
         "        image_detect = utils.read_image('test/images/'+detection)\n",
         "        predictions_detect = model.predict(image_detect)\n",
         "\n",
         "        labels_detect, boxes_detect, scores_detect = predictions_detect\n",
         "\n",
-        "        # filtracja wynikow\n",
+        "        #filtracja wynikow\n",
         "        detect_filter = np.where(scores_detect > 0.9)\n",
         "        scores_detect_filter = scores_detect[detect_filter]\n",
         "        boxes_detect_filter = boxes_detect[detect_filter]\n",
@@ -841,7 +842,7 @@
         "        for k in num_list_detect:\n",
         "            labels_detect_filter.append(labels_detect[k])\n",
         "\n",
-        "        # wyplotowanie obrazu, rozpoznanie typu, podanie wspolrzednych oraz prawdopodobienstwa\n",
+        "        #podanie nazwy obrazu, ilosci wykrytych obiektow oraz ich wspolrzednych\n",
         "        print(detection)\n",
         "        print(len(labels_detect_filter))\n",
         "        print(boxes_detect_filter)"
@@ -849,7 +850,7 @@
       "metadata": {
         "id": "8rZvmsKe5Yhf"
       },
-      "execution_count": 35,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -1643,17 +1644,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "qHOy-s9zILi_"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
